--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Built with Jekyll 3.2.0
 
 # Setup
-title:               Ed.
-tagline:             'A Jekyll theme for minimal editions'
+title:               Correspondence between Amelia Opie and Susannah Taylor
+tagline:             'A Digital Edition'
 description:         'Ed is a Jekyll theme designed for textual editors based on minimal computing principles, and focused on legibility and flexibility.'
 url:                 'http://roxanneeberle.github.io'
 baseurl:             '/ed'
